--- a/style.css
+++ b/style.css
@@ -4,14 +4,5 @@
 }
 
 body {
-  background-color: rgb(83, 22, 117);
-  color: white;
-}
-
-nav {
-  background-color: violet;
-}
-
-.articulo {
-  background-color: red;
+  background-color: yellowgreen;
 }
