--- a/style.css
+++ b/style.css
@@ -4,5 +4,11 @@
 }
 
 body {
-  background-color: yellowgreen;
+  background-color: darkblue;
+  color: white;
+  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 {
+  margin: 20px;
 }
