--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@
 body {
   background-color: darkblue;
   color: white;
-  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 h1 {
   margin: 20px;
+  letter-spacing: 3px;
 }
 
 nav {
