--- a/style.css
+++ b/style.css
@@ -14,8 +14,17 @@ h1 {
   letter-spacing: 3px;
 }
 
+header img {
+  width: 50px;
+  height: 50px;
+}
+
 nav {
   background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
 }
 
 nav ul {
